kubernetes/default/mailpit/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mailpit
  namespace: default
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames:
    - "mail.whoverse.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mailpit
          port: 8025
